用户管理 - 权限设置功能完成

--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -3,7 +3,11 @@
 }
 
 .margin-left-10px {
-	margin-left: 10px;
+	 margin-left: 10px;
+ }
+
+.margin-left-20px {
+	margin-left: 20px;
 }
 
 .margin-right-5px {
@@ -12,4 +16,24 @@
 
 .margin-right-10px {
 	margin-right: 10px;
+}
+
+.margin-top-5px {
+	margin-top: 5px;
+}
+
+.margin-top-10px {
+	margin-top: 10px;
+}
+
+.margin-bottom-5px {
+	margin-bottom: 5px;
+}
+
+.margin-bottom-10px {
+	margin-bottom: 10px;
+}
+
+.margin-bottom-20px {
+	margin-bottom: 20px;
 }
